--- a/templates/categories/list.html
+++ b/templates/categories/list.html
@@ -6,9 +6,11 @@
 <h1>Categories list</h1>
 
 {% for category in categories %}
-    <a href="#">
-        #{{ category.title }}
+    <a>
+        <p><a href="{% url 'category_products' category.id %}">
+            {{ category.title }}</a></p>
     </a>
 {% endfor %}
 
 {% endblock %}
+
