--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,9 @@
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="/products/">Products</a>
-                <a class="nav-link" href="/hashtags/">HashTags</a>
+                <a class="nav-link" href="/products/create/">Create Product</a>
                 <a class="nav-link" href="/categories/">Categories</a>
+                <a class="nav-link" href="/categories/create/">Create category</a>
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
         </div>
