--- a/templates/reviews/create.html
+++ b/templates/reviews/create.html
@@ -1,13 +1,19 @@
-{% extends 'index.html' %}
+{% include 'index.html' %}
 
 
 {% block content %}
 
-
+<link rel="stylesheet" href="{% static 'css/create_form.css' %}">
 <form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
+<div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner">
+    <h3>Add review</h3>
+        {% csrf_token %}
+        {{ form.as_p }}
     <input type="submit" value="Create">
+    </div>
 </form>
 
 
