--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -1,12 +1,16 @@
-{% extends 'layouts/index.html' %}
+{% include 'index.html' %}
 
 {% block content %}
-<h1>
-    Register
-</h1>
-    <form action="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
+<link rel="stylesheet" href="{% static 'css/create_form.css' %}">
+<form action="" method="POST" enctype="multipart/form-data">
+<div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner">
+    <h3>Registration</h3>
+        {% csrf_token %}
+        {{form.as_p}}
     <button type="submit">Register</button>
+    </div>
     </form>
 {% endblock %}
