--- a/templates/user/verify.html
+++ b/templates/user/verify.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/index.html'%}
+{% include 'index.html' %}
 {% block content %}
 
 <form action="" method="post" enctype="multipart/form-data">
